--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="rotas">
   <head>
-    <title>Cadastro de usuários</title>
+    <title>Calculo de rotas</title>
     <meta name="viewport" content="width-device-width">
     <meta charset="utf-8">
 
